--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,13 +1,13 @@
 {
-    "all":
-    {
-        "end_with_newline": false,
+  "all":
+  {
+    "end_with_newline": true,
 
-        "indent_size": 2,
+    "indent_size": 2,
 
-        "indent_with_tabs": false,
+    "indent_with_tabs": false,
 
-        "preserve_newlines": true,
+    "preserve_newlines": true,
 
-    },
+  },
 }
